--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   --tercer-bg-color: #060806;
   --text-color: #ffffffe2;
 
-  --main-color: #00fbff;
+  --main-color: #aa00ff;
   --transition: all 0.4s ease-in;
 }
 
